fix(component): improve Pagination display on mobile screens

--- a/packages/theme-color/styles/dark-mode/layout/navbar.styl
+++ b/packages/theme-color/styles/dark-mode/layout/navbar.styl
@@ -20,6 +20,12 @@
       bgColor()
       border 1px solid $nightBordercolor !important
 
+      .dropdown-item a
+        fontColor()
+
+        &:hover
+          color $accentColor
+
   // 下拉列表
   .dropdown-wrapper .dropdown-title .title
     fontColor()
