--- a/packages/theme-color/styles/dark-mode/plugins/pwa.styl
+++ b/packages/theme-color/styles/dark-mode/plugins/pwa.styl
@@ -6,3 +6,6 @@
     box-shadow none
     border 1px solid
     borderColor()
+
+    .refresh svg
+      fill #000
