--- a/packages/theme/src/styles/update/layout.styl
+++ b/packages/theme/src/styles/update/layout.styl
@@ -43,6 +43,9 @@
         border-color #eee
         box-shadow 2px 2px 10px #f0f1f2
 
+        .dropdown-item a
+          color #666
+
   // 更新搜索框样式
   .search-box input
     border-color transparent
